[gd_scene load_steps=21 format=3 uid="uid://bf3kugmhm0pqt"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_c0m7j"]
[ext_resource type="Texture2D" uid="uid://dgorcyshc620" path="res://assets/snake/head_animated.png" id="2_myy0b"]
[ext_resource type="Texture2D" uid="uid://cdjli6uphyjgm" path="res://assets/environment/floor.png" id="2_w6ewh"]
[ext_resource type="Texture2D" uid="uid://dwgwggtuxmfy6" path="res://assets/environment/wall.png" id="3_gghtf"]
[ext_resource type="Texture2D" uid="uid://b6dt3wmn574lq" path="res://assets/apples/apple1.png" id="5_hu78u"]
[ext_resource type="Texture2D" uid="uid://bj6ace68somk7" path="res://assets/snake/jump.png" id="6_n05t0"]
[ext_resource type="Texture2D" uid="uid://r82u6xyycfia" path="res://assets/debug/debug_box.png" id="6_qp1ht"]
[ext_resource type="Script" path="res://scripts/snake_manager.gd" id="7_ay4re"]
[ext_resource type="FontFile" uid="uid://2hoged8ymkjp" path="res://assets/fibberish.ttf" id="8_ikebx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a3ijf"]
texture = ExtResource("3_gghtf")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_av47b"]
texture = ExtResource("2_w6ewh")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xjk5o"]
sources/2 = SubResource("TileSetAtlasSource_a3ijf")
sources/3 = SubResource("TileSetAtlasSource_av47b")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lhim3"]
texture = ExtResource("2_myy0b")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
15:1/0 = 0
15:2/0 = 0
15:3/0 = 0
14:3/0 = 0
13:3/0 = 0
12:3/0 = 0
11:3/0 = 0
10:3/0 = 0
9:3/0 = 0
8:3/0 = 0
7:3/0 = 0
6:3/0 = 0
5:3/0 = 0
4:3/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
14:1/0 = 0
13:1/0 = 0
12:1/0 = 0
11:1/0 = 0
10:1/0 = 0
9:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
14:9/0 = 0
15:9/0 = 0
15:10/0 = 0
15:11/0 = 0
14:10/0 = 0
13:9/0 = 0
12:9/0 = 0
11:9/0 = 0
10:9/0 = 0
9:9/0 = 0
8:10/0 = 0
7:10/0 = 0
6:10/0 = 0
5:10/0 = 0
4:10/0 = 0
3:10/0 = 0
2:10/0 = 0
1:10/0 = 0
0:10/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
1:9/0 = 0
0:9/0 = 0
7:9/0 = 0
8:9/0 = 0
13:10/0 = 0
12:10/0 = 0
11:10/0 = 0
10:10/0 = 0
9:10/0 = 0
3:11/0 = 0
2:11/0 = 0
1:11/0 = 0
0:11/0 = 0
4:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
11:11/0 = 0
10:11/0 = 0
9:11/0 = 0
8:11/0 = 0
7:11/0 = 0
6:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
15:14/0 = 0
14:14/0 = 0
13:14/0 = 0
12:14/0 = 0
11:14/0 = 0
10:14/0 = 0
9:14/0 = 0
8:14/0 = 0
7:14/0 = 0
6:14/0 = 0
5:14/0 = 0
4:14/0 = 0
3:14/0 = 0
2:14/0 = 0
1:14/0 = 0
1:15/0 = 0
0:15/0 = 0
0:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
15:8/0 = 0

[sub_resource type="TileSet" id="TileSet_bucej"]
sources/3 = SubResource("TileSetAtlasSource_lhim3")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5ylei"]
texture = ExtResource("5_hu78u")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_df7od"]
sources/1 = SubResource("TileSetAtlasSource_5ylei")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1aqwx"]
texture = ExtResource("6_n05t0")
0:0/0 = 0
0:1/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
15:6/0 = 0
14:6/0 = 0
13:6/0 = 0
7:6/0 = 0
6:6/0 = 0
5:6/0 = 0
4:6/0 = 0
3:6/0 = 0
2:6/0 = 0
1:6/0 = 0
0:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0

[sub_resource type="TileSet" id="TileSet_q333y"]
sources/0 = SubResource("TileSetAtlasSource_1aqwx")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w58h2"]
texture = ExtResource("6_qp1ht")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_lbq1w"]
sources/0 = SubResource("TileSetAtlasSource_w58h2")

[node name="MainGame" type="Node"]
script = ExtResource("1_c0m7j")

[node name="GameTiles" type="Node" parent="."]

[node name="background" type="TileMapLayer" parent="GameTiles"]
unique_name_in_owner = true
position = Vector2(1, 0)
tile_set = SubResource("TileSet_xjk5o")

[node name="snakeLayer" type="TileMapLayer" parent="GameTiles"]
unique_name_in_owner = true
use_parent_material = true
tile_set = SubResource("TileSet_bucej")

[node name="appleLayer" type="TileMapLayer" parent="GameTiles"]
unique_name_in_owner = true
position = Vector2(0, -1)
tile_set = SubResource("TileSet_df7od")

[node name="snakeJumpingLayer" type="TileMapLayer" parent="GameTiles"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_q333y")

[node name="SnakeManager" type="Node" parent="GameTiles"]
unique_name_in_owner = true
script = ExtResource("7_ay4re")

[node name="DebugLayer" type="TileMapLayer" parent="GameTiles"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_lbq1w")

[node name="jsp" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="jsp"]
position = Vector2(27, 16)
zoom = Vector2(3, 3)
process_callback = 0

[node name="DebugLabels" type="Label" parent="jsp"]
unique_name_in_owner = true
offset_left = -286.0
offset_top = -157.0
offset_right = -205.0
offset_bottom = -134.0
theme_override_fonts/font = ExtResource("8_ikebx")
text = "PLACEHOLDER"
